# wifi-test

./: .gitignore  LICENSE  README.md  pyproject.toml  wifi_scan.txt
wifi_test/: cli.py  config.py  db.py  scanner.py  speedtest.py  utils.py
